src/index.css
@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
@import "tailwindcss";

body {
  background-color: #0a0a0a;
  background-image:
    linear-gradient(rgba(255,255,255,0.03) 1px, transparent 1px),
    linear-gradient(90deg, rgba(255,255,255,0.03) 1px, transparent 1px);
  background-size: 32px 32px;
}


/* Scrollbar hide */
.scrollbar-hide {
    -ms-overflow-style: none;
    scrollbar-width: none;
}
.scrollbar-hide::-webkit-scrollbar {
    display: none;
}

